JCF: Update German translation

--- a/components/jcf2/IdePlugin/lazarus/languages/jcfbaseconsts.de.po
+++ b/components/jcf2/IdePlugin/lazarus/languages/jcfbaseconsts.de.po
@@ -1,13 +1,15 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Swen Heinig <swen.heinig@freenet.de>\n"
 "Language-Team: \n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.6\n"
 
 #: jcfbaseconsts.liserrorwritingsettingsexception
 #, object-pascal-format
@@ -26,5 +28,4 @@ msgstr "Keine Voreinstellungen gefunden"
 #: jcfbaseconsts.listhesettingsfiledoesnotexist
 #, object-pascal-format
 msgid "The settings file \"%s\" does not exist.%sThe formatter will work better if it is configured to use a valid settings file"
-msgstr "Die Konfigurationsdatei »%s« fehlt.%sDer Formatierer arbeitet mit einer gültigen Konfigurationsdatei besser."
-
+msgstr "Die Konfigurationsdatei »%s« fehlt.%sDer Formatierer arbeitet mit einer gültigen Konfigurationsdatei besser"
