SynEdit: regenerated translations and updated Russian translation

--- a/components/synedit/languages/syneditstrconst.ca.po
+++ b/components/synedit/languages/syneditstrconst.ca.po
@@ -94,7 +94,7 @@ msgid "Comment"
 msgstr ""
 
 #: syneditstrconst.syns_attrcommentansi
-msgid "Ansi Comment"
+msgid "ANSI Comment"
 msgstr ""
 
 #: syneditstrconst.syns_attrcommentcurly
