--- a/components/synedit/languages/syneditstrconst.de.po
+++ b/components/synedit/languages/syneditstrconst.de.po
@@ -98,7 +98,7 @@ msgid "Comment"
 msgstr "Kommentar"
 
 #: syneditstrconst.syns_attrcommentansi
-msgid "Ansi Comment"
+msgid "ANSI Comment"
 msgstr ""
 
 #: syneditstrconst.syns_attrcommentcurly
