--- a/components/synedit/languages/syneditstrconst.fi.po
+++ b/components/synedit/languages/syneditstrconst.fi.po
@@ -89,7 +89,7 @@ msgid "Comment"
 msgstr "Kommentti"
 
 #: syneditstrconst.syns_attrcommentansi
-msgid "Ansi Comment"
+msgid "ANSI Comment"
 msgstr ""
 
 #: syneditstrconst.syns_attrcommentcurly
