--- a/components/synedit/languages/syneditstrconst.pot
+++ b/components/synedit/languages/syneditstrconst.pot
@@ -86,7 +86,7 @@ msgid "Comment"
 msgstr ""
 
 #: syneditstrconst.syns_attrcommentansi
-msgid "Ansi Comment"
+msgid "ANSI Comment"
 msgstr ""
 
 #: syneditstrconst.syns_attrcommentcurly
