--- a/components/synedit/languages/syneditstrconst.es.po
+++ b/components/synedit/languages/syneditstrconst.es.po
@@ -96,7 +96,7 @@ msgid "Comment"
 msgstr "Comentario"
 
 #: syneditstrconst.syns_attrcommentansi
-msgid "Ansi Comment"
+msgid "ANSI Comment"
 msgstr ""
 
 #: syneditstrconst.syns_attrcommentcurly
