--- a/components/synedit/languages/syneditstrconst.it.po
+++ b/components/synedit/languages/syneditstrconst.it.po
@@ -97,7 +97,7 @@ msgid "Comment"
 msgstr "Commento"
 
 #: syneditstrconst.syns_attrcommentansi
-msgid "Ansi Comment"
+msgid "ANSI Comment"
 msgstr ""
 
 #: syneditstrconst.syns_attrcommentcurly
