--- a/components/synedit/languages/syneditstrconst.lt.po
+++ b/components/synedit/languages/syneditstrconst.lt.po
@@ -97,7 +97,7 @@ msgid "Comment"
 msgstr "Komentaras"
 
 #: syneditstrconst.syns_attrcommentansi
-msgid "Ansi Comment"
+msgid "ANSI Comment"
 msgstr ""
 
 #: syneditstrconst.syns_attrcommentcurly
