--- a/components/synedit/languages/syneditstrconst.nl.po
+++ b/components/synedit/languages/syneditstrconst.nl.po
@@ -94,7 +94,7 @@ msgid "Comment"
 msgstr ""
 
 #: syneditstrconst.syns_attrcommentansi
-msgid "Ansi Comment"
+msgid "ANSI Comment"
 msgstr ""
 
 #: syneditstrconst.syns_attrcommentcurly
