--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-03-25 01:38+0300\n"
+"PO-Revision-Date: 2025-04-04 00:10+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -564,6 +564,18 @@ msgstr "Текст"
 #: lazarusidestrconsts.dlgaddhiattrgroupwrap
 msgid "Wrapping"
 msgstr "Перенос слов"
+
+#: lazarusidestrconsts.dlgaddhiattrgroup_comment
+msgid "Comments"
+msgstr "Комментарии"
+
+#: lazarusidestrconsts.dlgaddhiattrgroup_declsection
+msgid "Declaration Blocks"
+msgstr "Блоки объявлений"
+
+#: lazarusidestrconsts.dlgaddhiattrgroup_progheader
+msgid "Procedure Header"
+msgstr "Заголовок процедуры"
 
 #: lazarusidestrconsts.dlgaddhiattrgroup_suffix_custom
 msgid "(Custom)"
@@ -20202,12 +20214,12 @@ msgid "Delete to start of word"
 msgstr "Удалить до начала слова"
 
 #: lazarusidestrconsts.srkmecdeleteline
-msgid "Delete current line"
-msgstr "Удалить текущую строку"
+msgid "Delete current line (keep caret at BOL)"
+msgstr "Удалить текущую строку (поместить курсор в начало строки)"
 
 #: lazarusidestrconsts.srkmecdeletelinekeepx
-msgid "Delete current line (keep X pos)"
-msgstr "Удалить текущую строку (сохранить позицию по X)"
+msgid "Delete current line (restore caret x-pos)"
+msgstr "Удалить текущую строку (сохранить позицию X курсора)"
 
 #: lazarusidestrconsts.srkmecdeleteword
 msgid "Delete to end of word"
